# well_plate

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg
examples/: example1.py  example1_data.csv  generate_img.py
well_plate/: __init__.py  color_map.py  config.py  grid.py  utils.py  well_plate.py
