[metadata]
name = well_plate
version = 0.0.1
description = Work with well plates!
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/well_plate
license = BSD
license_file = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    well_plate
python_requires = >=3.9
zip_safe = no
include_package_data = true
install_requires =
    numpy>=1.21.5
    pandas>=1.4.2
    plotly>=5.6.0